/*
 * Copyright Â© 2022, The Elide Framework Authors. All rights reserved.
 *
 * The Gust/Elide framework and tools, and all associated source or object computer code, except where otherwise noted,
 * are licensed under the Zero Prosperity license, which is enclosed in this repository, in the file LICENSE.txt. Use of
 * this code in object or source form requires and implies consent and agreement to that license in principle and
 * practice. Source or object code not listing this header, or unless specified otherwise, remain the property of
 * Elide LLC and its suppliers, if any. The intellectual and technical concepts contained herein are proprietary to
 * Elide LLC and its suppliers and may be covered by U.S. and Foreign Patents, or patents in process, and are protected
 * by trade secret and copyright law. Dissemination of this information, or reproduction of this material, in any form,
 * is strictly forbidden except in adherence with assigned license requirements.
 */

/*
 * Specifies structures which are used at runtime to implement the virtual file system provided to Elide application
 * guest VMs; see also `directory` and `file`.
 */
syntax = "proto3";
package elide.vfs;

option optimize_for = SPEED;
option cc_enable_arenas = true;
option java_multiple_files = true;
option java_string_check_utf8 = true;
option php_class_prefix = "EVFS";
option swift_prefix = "ElideVFS";
option objc_class_prefix = "EVS";
option java_package = "tools.elide.vfs";
option csharp_namespace = "Elide.VFS";

import "google/protobuf/timestamp.proto";
import "elide/data/data.proto";
import "elide/vfs/file.proto";


// # VFS: Directory
//
// Describes a directory-type entry within a given `TreeEntry`, within a virtual file system managed by Elide. Directory
// entries can hold children (either `File` or other `Directory` objects), by way of their `TreeEntry` children. Entries
// of type `Directory` are virtualized and carry no data.
message Directory {
  // Name of the directory.
  string name = 1;

  // Reserved for future use.
  reserved 2;

  // Children held by this directory.
  repeated TreeEntry children = 3;
}


// # VFS: Tree Entry
//
// Describes a single entry within a given virtual file system managed by Elide. Tree entries can hold `File` or
// `Directory` objects. Directories can, themselves, hold child `TreeEntry` objects, but files cannot.
message TreeEntry {
  // Reference to the tree entry which holds this entry as a parent. If no parent is present, the `TreeEntry` models the
  // root entry of the virtual file system. In other words, all non-root `TreeEntry` objects have a parent.
  TreeEntry parent = 1;

  // Describes the file system entry held by this tree entry.
  oneof entry {
    // Describes a directory held by this tree entry.
    Directory directory = 9;

    // Describes a file held by this tree entry.
    File file = 10;
  }
}


// # VFS: File System
//
// Describes a root singleton metadata record which points to the root `TreeEntry` of a given virtual file system
// managed by Elide. Only one `Filesystem` may exist per image.
message Filesystem {
  // Filesystem-wide metadata calculated by build tools and provided at runtime.
  message Metadata {
    // Size of the entire virtual file system, uncompressed, in bytes.
    uint64 size = 1;

    // Size of the entire virtual file system, compressed, in bytes.
    uint64 compressed = 2;

    // Compression mode applied to the virtual file system.
    data.CompressionMode compression = 3;

    // Describes the most-recent modification timestamp of any constituent file within the virtual file system.
    google.protobuf.Timestamp modified = 6;
  }

  // Metadata describing this filesystem.
  Metadata metadata = 1;

  // Root `TreeEntry` of the virtual file system.
  TreeEntry root = 2;
}
